Propiedades de jwt

--- a/SpringSecurity&Jwt/jwt/src/main/resources/application.properties
+++ b/SpringSecurity&Jwt/jwt/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.jpa.show-sql=true
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# JWT
+jwt.secret.key=5Idps3hiLpxQoP5sUau47v1E2yWDIe76BQg4ukwBIpsf
+jwt.time.expiration=86400000
+
