--- a/SpringSecurity&Jwt/jwt/src/main/resources/application.properties
+++ b/SpringSecurity&Jwt/jwt/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=irving
 spring.datasource.password=boxing
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 # swagger-ui custom path
