Añadí dependencia de Lombok en el archivo pom.xml
- Incluí la dependencia Lombok para simplificar el código

--- a/Login&Jwt/login/pom.xml
+++ b/Login&Jwt/login/pom.xml
@@ -95,6 +95,13 @@
 			<artifactId>jacoco-maven-plugin</artifactId>
 			<version>0.8.12</version>
 		</dependency>
+		<!-- Lombook -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
