Añadí configuración JWT en application.properties
- Incluí propiedades para jwtSecret y jwtExpirationMs

--- a/Login&Jwt/login/src/main/resources/application.properties
+++ b/Login&Jwt/login/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.show-sql=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 
+#Configuracion JWT
+app.jwtSecret= yourSecretKey
+app.jwtExpirationMs= 86400000
+
